fix: reduce padding in section for improved layout on mobile

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 12px;
+  padding: 4px;
 }
 .card-img-wrap--mobile img {
   width: auto;
